--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 
   <body>
     <div id="board"></div>
+
+    <p id="clockdiv">timer</p>
+
+    <div id="ProgressBar">
+      <div id="InnerProgressBar">0%</div>
+    </div>
+
     <script src="src/index.js"></script>
   </body>
 </html>
